--- a/src/shared/Sheeva.Data.Abstractions/Sheeva.Data.Abstractions.csproj
+++ b/src/shared/Sheeva.Data.Abstractions/Sheeva.Data.Abstractions.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Sheeva.Core\Sheeva.Core.csproj" />
+      <ProjectReference Include="..\Sheeva.Logging\Sheeva.Logging.csproj" />
       <ProjectReference Include="..\Sheeva.Log\Sheeva.Log.csproj" />
       <ProjectReference Include="..\Sheeva.Services\Sheeva.Services.csproj" />
     </ItemGroup>
